--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "skeleton",
+    "name": "fraudlogix",
     "version": "1.0.0",
-    "description": "[![Latest Version on Packagist](https://img.shields.io/packagist/v/:vendor_slug/:package_slug.svg?style=flat-square)](https://packagist.org/packages/:vendor_slug/:package_slug) [![GitHub Tests Action Status](https://img.shields.io/github/workflow/status/:vendor_slug/:package_slug/run-tests?label=tests)](https://github.com/:vendor_slug/:package_slug/actions?query=workflow%3Arun-tests+branch%3Amain) [![GitHub Code Style Action Status](https://img.shields.io/github/workflow/status/:vendor_slug/:package_slug/Check%20&%20fix%20styling?label=code%20style)](https://github.com/:vendor_slug/:package_slug/actions?query=workflow%3A\"Check+%26+fix+styling\"+branch%3Amain) [![Total Downloads](https://img.shields.io/packagist/dt/:vendor_slug/:package_slug.svg?style=flat-square)](https://packagist.org/packages/:vendor_slug/:package_slug)",
+    "description": "[![Latest Version on Packagist](https://img.shields.io/packagist/v/astrogoat/fraudlogix.svg?style=flat-square)](https://packagist.org/packages/astrogoat/fraudlogix) [![GitHub Tests Action Status](https://img.shields.io/github/workflow/status/astrogoat/fraudlogix/run-tests?label=tests)](https://github.com/astrogoat/fraudlogix/actions?query=workflow%3Arun-tests+branch%3Amain) [![GitHub Code Style Action Status](https://img.shields.io/github/workflow/status/astrogoat/fraudlogix/Check%20&%20fix%20styling?label=code%20style)](https://github.com/astrogoat/fraudlogix/actions?query=workflow%3A\"Check+%26+fix+styling\"+branch%3Amain) [![Total Downloads](https://img.shields.io/packagist/dt/astrogoat/fraudlogix.svg?style=flat-square)](https://packagist.org/packages/astrogoat/fraudlogix)",
     "directories": {
         "test": "tests"
     },
@@ -12,16 +12,16 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/astrogoat/skeleton.git"
+        "url": "git+https://github.com/astrogoat/fraudlogix.git"
     },
     "keywords": [
         "strata",
-        "skeleton"
+        "fraudlogix"
     ],
-    "author": ":author_name",
+    "author": "Kristoffer Tonning",
     "license": "UNLICENSED",
     "bugs": {
-        "url": "https://github.com/astrogoat/skeleton/issues"
+        "url": "https://github.com/astrogoat/fraudlogix/issues"
     },
-    "homepage": "https://github.com/astrogoat/skeleton#readme"
+    "homepage": "https://github.com/astrogoat/fraudlogix#readme"
 }
