--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "strata",
         "fraudlogix"
     ],
-    "author": "Kristoffer Tonning",
+    "author": "Laura Tonning",
     "license": "UNLICENSED",
     "bugs": {
         "url": "https://github.com/astrogoat/fraudlogix/issues"
